--- a/download_centre.html
+++ b/download_centre.html
@@ -45,31 +45,27 @@
     <section class="articles" title="Articles"> <!-- Section for articles -->
         <h2>Downloads</h2> <!-- Section heading -->
         <div class="articlerow"> <!-- Article row -->
-            <div class="articlecolumn" title="Settings Optimiser"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(download_centre/system_settings_optimiser.png);" title="Settings Optimiser"> <!-- Article column -->
                 <h3>Settings Optimiser Scripts</h3> <!-- Article title -->
                 <hr>
-                <img src="download_centre/system_settings_optimiser.png" alt="An image representing the Hackboto Tech Tips Settings Optimiser" title="Image representing the Settings Optimiser Software"><!-- Image related to the article -->
                 <p>The Hackboto Tech Tips Settings Optimiser will optimise the settings on your Windows 10/ 11 based PC so that your personal data is more secure, you have less bloatware and advertisements, and general settings changes to ensure that your PC runs as efficiently as possible.</p> <!-- Article excerpt -->
                 <a href="download_centre/settings_optimiser.html" title="Visit Settings Optimiser">Download Page</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" title="MPO Fix"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(download_centre/multi-pane_overlay_disable_reg/disable_mpo.png);" title="MPO Fix"> <!-- Article column -->
                 <h3>MPO Fix .reg</h3> <!-- Article title -->
                 <hr>
-                <img src="download_centre/multi-pane_overlay_disable_reg/disable_mpo.png" alt="An image representing the Hackboto Tech Tips Settings Optimiser" title="Image representing the Settings Optimiser Software"><!-- Image related to the article -->
                 <p>Download and learn to use the Multi-Plane Overlay Fix Registry Files. These files can be used to fix the black artifacts and black screen issues that are often associated Hardware Acceleration.</p> <!-- Article excerpt -->
                 <a href="download_centre/multi-pane_overlay_disable_reg.html" title="Visit MPO Fix download page">Download Page</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" title="POPCNT Checker"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(download_centre/popcnt_checker/popcnt.png);" title="POPCNT Checker"> <!-- Article column -->
                 <h3>POPCNT Checker</h3> <!-- Article title -->
                 <hr>
-                <img src="download_centre/popcnt_checker/popcnt.png" alt="An image representing the POPCNT Checker program" title="Image representing the POPCNT Checker program"><!-- Image related to the article -->
                 <p>Download the Hackboto Tech Tips POPCNT Checker program, learn if your computer system is ready for Windows 11 24H2 by checking to see if it supports the POPCNT CPU instruction.</p> <!-- Article excerpt -->
                 <a href="download_centre/popcnt_checker.html" title="Visit POPCNT Checker download page">Download Page</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" title="Computer Optimiser"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(download_centre/computer_optimiser/system_optimiser.png);" title="Computer Optimiser"> <!-- Article column -->
                 <h3>Computer Optimiser Scripts</h3> <!-- Article title -->
                 <hr>
-                <img src="download_centre/computer_optimiser/system_optimiser.png" alt="An image representing the Hackboto Tech Tips System Optimiser" title="Image representing the System Optimiser Software"><!-- Image related to the article -->
                 <p>Download the Hackboto Tech Tips Computer Optimise Scripts, improve the performance of you Windows 10/ 11 PC by removing old files and system level corruption.</p> <!-- Article excerpt -->
                 <a href="download_centre/computer_optimiser.html" title="Visit Computer Optimiser download page">Download Page</a> <!-- Link to full article -->
             </div>
