--- a/pc_tips.html
+++ b/pc_tips.html
@@ -57,7 +57,7 @@
                 <p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this guide will explain how you can overcome these issues.</p> <!-- Article excerpt -->
                 <a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/debloat.png);" title="Debloat Windows 11 24H2"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/debloat.webp);" title="Debloat Windows 11 24H2"> <!-- Article column -->
                 <h3>Debloat Windows 11 24H2</h3> <!-- Article title -->
                 <hr>
                 <p>Are you getting sick and tired of popups telling you to sign up for X Y Z, are you getting sick of constant notifications, and are you getting sick of poor performance from your PC, if so, read the guide.</p> <!-- Article excerpt -->
