--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@
 <body>
     <header> <!-- Header section -->
         <div class="logo">
-            <img src="index/BrandLogo.png" alt="company logo" title="Hackboto Tech Tips logo"> <!-- Logo image -->
+            <img src="index/BrandLogo.webp" alt="company logo" title="Hackboto Tech Tips logo"> <!-- Logo image -->
         </div>
         <div class="headertext">
             <p>Hackboto Tech Tips</p> <!-- Header text -->
