--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -15,7 +15,7 @@
 <body>
     <header id="top-of-page"> <!-- Header section -->
         <div class="logo">
-            <img src="../index/BrandLogo.png" alt="company logo" title="Hackboto Tech Tips logo">
+            <img src="../index/BrandLogo.webp" alt="company logo" title="Hackboto Tech Tips logo">
         </div>
         <div class="headertext">
             <p>Hackboto Tech Tips</p>
