--- a/pc_tips.html
+++ b/pc_tips.html
@@ -44,44 +44,44 @@
     <section class="articles" title="Articles"> <!-- Section for articles -->
         <h2>Guides</h2> <!-- Section heading -->
         <div class="articlerow"> <!-- Article row -->
-            <div class="articlecolumn" style="background-image: url(pc_tips/upgrading_to_windows11/upgradefrom10to11.webp);" title="Upgrading To Windows 11"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/upgradefrom10to11.webp);" title="Upgrading To Windows 11"> <!-- Article column -->
                 <h3>Upgrade to Windows 11</h3> <!-- Article title -->
                 <hr>
                 <p>Did you know that Windows 10 is EOL in 2025, if you do not upgrade to Windows 11 by then you will no longer receive security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
                 <br>
                 <a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/windows_optimise/windows_errors.webp);" title="Optimising Windows 10/ 11"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/windows_errors.webp);" title="Optimising Windows 10/ 11"> <!-- Article column -->
                 <h3>Optimising Windows 10/ 11</h3> <!-- Article title -->
                 <hr>
                 <p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this guide will explain how you can overcome these issues.</p> <!-- Article excerpt -->
                 <a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/debloat.webp);" title="Debloat Windows 11 24H2"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/debloat.webp);" title="Debloat Windows 11 24H2"> <!-- Article column -->
                 <h3>Debloat Windows 11 24H2</h3> <!-- Article title -->
                 <hr>
                 <p>Are you getting sick and tired of popups telling you to sign up for X Y Z, are you getting sick of constant notifications, and are you getting sick of poor performance from your PC, if so, read the guide.</p> <!-- Article excerpt -->
                 <a href="pc_tips/windows_debloat.html" title="Read about debloating Windows 11 24H2">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/hardware_acceleration_black_screen_fix/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Black Screen"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Black Screen"> <!-- Article column -->
                 <h3>Fix Hardware Acceleration Black Screen</h3> <!-- Article title -->
                 <hr>
                 <p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p> <!-- Article excerpt -->
                 <a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/windows_backup/computer_backup.webp);" title="Backing up your Windows 10/ 11 PC"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/computer_backup.webp);" title="Backing up your Windows 10/ 11 PC"> <!-- Article column -->
                 <h3>Backing up Windows 10/ 11</h3> <!-- Article title -->
                     <hr>
                 <p>Do you regularly back up your files and computer system? If not, you need to start doing so in the event that your PC fails unexpectedly or becomes corrupted, learn about backing up your computer the correct way without the "Cloud".</p> <!-- Article excerpt -->
                 <a href="pc_tips/windows_backup.html" title="Learn About backing up your computer and your files.">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/adblocker/ads_everywhere.webp);" title="Blocking ads on your PC"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/ads_everywhere.webp);" title="Blocking ads on your PC"> <!-- Article column -->
                 <h3>Blocking ads on your PC</h3> <!-- Article title -->
                     <hr>
                 <p>Are you getting sick of long loading times, popups, and distracting adverts everywhere on the internet? If you are you should learn about the uBlock Origin browser extension and how you can get rid of annoying ads once and for all.</p> <!-- Article excerpt -->
                 <a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">View Guide</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/check_wddm_version/display_1_dxdiag.webp);" title="Finding WDDM Version"> <!-- Article column -->
+            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/display_1_dxdiag.webp);" title="Finding WDDM Version"> <!-- Article column -->
                 <h3>Finding your WDDM Version</h3> <!-- Article title -->
                     <hr>
                 <p>Do you need to find the WDDM Driver Model version for your computer? This guide will assist you in using the dxdiag tool to find your WDDM version.</p> <!-- Article excerpt -->
