--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <a class="active" href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
-            <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
+            <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
         </div>
     </nav>
     <section title="Main Content"> <!-- Main content section -->
@@ -47,7 +47,6 @@
                     <label for="message" title="Your Message">Message:</label><br> <!-- Message input -->
                     <textarea id="message" name="message" rows="4" required></textarea><br>
                     <input type="submit" value="Submit" title="Submit Form"> <!-- Submit button -->
-                    <p><strong>There is a known issue impacting this form on older versions of iOS and Safari, the form will work but you may need to keep retrying it, make sure that all the required fields are filled out correctly.</strong></p>
                     <p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkblack" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
                 </form>
             </div>
