--- a/pc_tips/adblocker.html
+++ b/pc_tips/adblocker.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
+    <script src="../scripts.js"></script> <!-- JavaScript file -->
     <title>Blocking Ads on your PC | Hackboto Tech Tips</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
             <a href="../contact.html" title="Visit Contact page">Contact</a>
         </div>
             <div class="columnclose">
-            <div class="nav"><a href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
+            <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
         </div>
       </nav>
       <aside title="Jump To Section"> <!-- Aside section for additional content -->
