--- a/mobile_tips.html
+++ b/mobile_tips.html
@@ -30,7 +30,7 @@
             <a href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
-            <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
+            <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
         </div>
     </nav>
     <br>
