--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -56,7 +56,7 @@
             <h2 id="Introduction">Introduction</h2>
                 <p>Windows 11 was released on 05/10/2021, making it three years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
                 <p>Windows 10 will stop receiving security updates in 2025, this means that you have just under a year to upgrade or risk becoming vulnerable to cyber-attacks.</p>
-                <p>Currently you can upgrade from Windows 10 to Windows 11 for free *expected to end in September 2024*, the upgrade process is really simple and straight forward provided that you have a supported PC, if your PC is not supported you can still upgrade but it will be a bit more complicated.</p>
+                <p>Currently you can upgrade from Windows 10 to Windows 11 for free, the upgrade process is really simple and straight forward provided that you have a supported PC, if your PC is not supported you can still upgrade but it will be a bit more complicated.</p>
                 <p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
                 <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h2 id="how-to-tell-if-supported">How do I tell if my PC is supported?</h2> 
@@ -130,7 +130,7 @@
             <p>Debloating your computer system is a really straight forward process, you can learn about the benefits of debloating your computer system, and how you can do it by visiting my guide which is linked below.</p>
             <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_debloat.html" title="Visit my guide on debloating Windows 11 24H2">Guide on Debloating Windows 11 24H2</a>
             <hr>
-        <p>Page Updated: 28/06/2024</p>
+        <p>Page Updated: 07/09/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
