--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,7 @@
 </head>
 <body>
     <header> <!-- Header section -->
-        <div class="logo">
-            <img src="index/BrandLogo.webp" alt="HTT logo" title="Hackboto Tech Tips Logo"> <!-- Logo image -->
-        </div>
-        <div class="headertext">
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </div>
+        <p>Hackboto Tech Tips</p> <!-- Header text -->
     </header>
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
@@ -33,23 +28,24 @@
             <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
         </div>
     </nav>
+    <br>
     <section title="Main Content"> <!-- Main content section -->
-        <div class="contact" title="Contact Form"> <!-- Contact section -->
+        <div class="welcometext"> <!-- Contact section -->
             <h1>Contact Hackboto Tech Tips</h1> <!-- Contact heading -->
             <p>Notice: You submit data in this form at your own risk, Hackboto Tech Tips does not take any legal responsibility for the data submitted. The form uses a third-party service you can find their <a href="https://formspree.io/legal/privacy-policy/" class="linkwhite" title="Go To Formspree Privacy Policy">Privacy Policy Here.</a></p> <!-- Contact information -->
-            <hr>
-            <div class="contact-form"> <!-- Contact form -->
-                <form action="https://formspree.io/f/mzbnlvqw" method="post"> <!-- Form -->
-                    <label for="name" title="Your Name">Name:</label><br> <!-- Name input -->
-                    <input type="text" id="name" name="name" required><br>
-                    <label for="email" title="Your Email">Email:</label><br> <!-- Email input -->
-                    <input type="email" id="email" name="email" required><br>
-                    <label for="message" title="Your Message">Message:</label><br> <!-- Message input -->
-                    <textarea id="message" name="message" rows="4" required></textarea><br>
-                    <input type="submit" value="Submit" title="Submit Form"> <!-- Submit button -->
-                    <p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkblack" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
-                </form>
-            </div>
+        </div>
+        <br>
+        <div class="contact-form" title="Contact Form"> <!-- Contact form -->
+            <form action="https://formspree.io/f/mzbnlvqw" method="post"> <!-- Form -->
+                <label for="name" title="Your Name">Name:</label><br> <!-- Name input -->
+                <input type="text" id="name" name="name" required><br>
+                <label for="email" title="Your Email">Email:</label><br> <!-- Email input -->
+                <input type="email" id="email" name="email" required><br>
+                <label for="message" title="Your Message">Message:</label><br> <!-- Message input -->
+                <textarea id="message" name="message" rows="4" required></textarea><br>
+                <input type="submit" value="Submit" title="Submit Form"> <!-- Submit button -->
+                <p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkblack" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
+            </form>
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
