--- a/download_centre.html
+++ b/download_centre.html
@@ -14,12 +14,7 @@
 </head>
 <body>
     <header> <!-- Header section -->
-        <div class="logo">
-            <img src="index/BrandLogo.webp" alt="company logo" title="Hackboto Tech Tips Logo"> <!-- Logo image -->
-        </div>
-        <div class="headertext">
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </div>
+        <p>Hackboto Tech Tips</p> <!-- Header text -->
     </header>
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
@@ -35,7 +30,7 @@
     </nav>
     <br>
     <section title="Download Centre"> <!-- Section for download centre-->
-        <div class="pagewelcome">
+        <div class="welcometext">
             <h1>Download Centre</h1> <!-- Page heading -->
             <p>This is where you can find all of the software that I am currently distributing, below you will find the latest versions of all my software.</p> <!-- Page description -->
             <p>By downloading or using any of the software that I am distributing, you have agreed to the terms and conditions that I have set out in the legal section of this website.</p>
