--- a/pc_tips.html
+++ b/pc_tips.html
@@ -14,12 +14,7 @@
 </head>
 <body>
     <header> <!-- Header section -->
-        <div class="logo">
-            <img src="index/BrandLogo.webp" alt="company logo" title="Hackboto Tech Tips Logo"> <!-- Logo image -->
-        </div>
-        <div class="headertext">
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </div>
+        <p>Hackboto Tech Tips</p> <!-- Header text -->
     </header>
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
@@ -35,7 +30,7 @@
     </nav>
     <br>
     <section title="PC Guides" > <!-- Section for PC Tips and Tricks -->
-        <div class="pagewelcome">
+        <div class="welcometext">
             <h1>PC Guides</h1> <!-- Page heading -->
             <p>On this page you will find all my helpful tips and tricks regarding your personal computer, you will find tips on reducing the number of ads you see, improving your system performance, getting the most out of your existing computer, and much more.</p> <!-- Page description -->
         </div>
