--- a/legal.html
+++ b/legal.html
@@ -13,13 +13,8 @@
     <title>Legal | Hackboto Tech Tips</title> <!-- Document title -->
 </head>
 <body>
-    <header> <!-- Header section -->
-        <div class="logo">
-            <img src="index/BrandLogo.webp" alt="company logo" title="Hackboto Tech Tips logo"> <!-- Logo image -->
-        </div>
-        <div class="headertext" id="top-of-page">
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </div>
+    <header id="top-of-page"> <!-- Header section -->
+        <p>Hackboto Tech Tips</p> <!-- Header text -->
     </header>
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
