--- a/mobile_tips.html
+++ b/mobile_tips.html
@@ -14,12 +14,7 @@
 </head>
 <body>
     <header> <!-- Header section -->
-        <div class="logo">
-            <img src="index/BrandLogo.webp" alt="company logo" title="Hackboto Tech Tips Logo"> <!-- Logo image -->
-        </div>
-        <div class="headertext">
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </div>
+        <p>Hackboto Tech Tips</p> <!-- Header text -->
     </header>
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
@@ -35,7 +30,7 @@
     </nav>
     <br>
     <section title="Mobile Phone Guides" > <!-- Section for Mobile Tips and Tricks -->
-        <div class="pagewelcome">
+        <div class="welcometext">
             <h1>Mobile Phone Guides</h1> <!-- Page heading -->
             <p>On this page you will find all my helpful tips and tricks regarding your mobile phone, you will find tips on reducing the number of ads you see, improving your mobile phone performance, getting the most out of your existing mobile phone, and much more.</p> <!-- Page description -->
         </div>
