--- a/pc_tips/adblocker.html
+++ b/pc_tips/adblocker.html
@@ -46,7 +46,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Blocking advertisements on your PC</h1>
-            <img src="adblocker/ads_everywhere.png" alt="Webpage full of ads">
+            <img src="adblocker/ads_everywhere.webp" alt="Webpage full of ads">
                 <p class="imgdescription">Ads are annoying, they also put you at risk from scams and malware.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Advertisements are commonplace on the internet as they are a really quick and easy way to make a few quick quid here and there for the website owners/ operators, however in recent years advertisements have become more common place as website owners/ operators are becoming greedier and wanting a larger income from their sites at your expense.</p>
@@ -60,30 +60,30 @@
             <h2 id="installing-ublock">How to install uBlock Origin</h2>
                 <p>It is really easy to install uBlock Origin on your PCs web browser you just need to follow the guide below for your particular web browser.</p>
                 <h3 id="EDGE">Installing uBlock Origin on Microsoft Edge</h3>
-                    <img src="adblocker/edge_get.png" alt="Get uBlock Origin for Microsoft Edge">
+                    <img src="adblocker/edge_get.webp" alt="Get uBlock Origin for Microsoft Edge">
                     <p>To install uBlock Origin on Microsoft Edge you need to visit the uBlock Origin page in the Edge Add-ons and click on the "Get" button.</p>
                     <a class="linkbutton" title="Edge Add-ons: uBlock Origin" href="https://microsoftedge.microsoft.com/addons/detail/ublock-origin/odfafepnkmbhccpbejgmiehpchacaeak">Edge Add-ons: uBlock Origin</a>
                     <br>
-                    <img src="adblocker/edge_add.png" alt="Add 'uBlock Origin' to Microsoft Edge? Add extension is circled">
+                    <img src="adblocker/edge_add.webp" alt="Add 'uBlock Origin' to Microsoft Edge? Add extension is circled">
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
                 <h3 id="FIREFOX">Installing uBlock Origin on Mozilla Firefox</h3>
-                    <img src="adblocker/firefox_get.png" alt="Add uBlock Origin to Firefox">
+                    <img src="adblocker/firefox_get.webp" alt="Add uBlock Origin to Firefox">
                     <p>To install uBlock Origin on Mozilla Firefox you need to visit the uBlock Origin page in the Firefox Browser ADD-ONS and click on the "Add to Firefox" button.</p>
                     <a class="linkbutton" title="Firefox Browser ADD-ONS: uBlock Origin" href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/">Firefox Browser ADD-ONS: uBlock Origin</a>
                     <br>
-                    <img src="adblocker/firefox_add.png" alt="Add uBlock Origin? Add extension is circled">
+                    <img src="adblocker/firefox_add.webp" alt="Add uBlock Origin? Add extension is circled">
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
                 <h3 id="CHROME">Installing uBlock Origin on Google Chrome</h3>
-                    <img src="adblocker/chrome_get.png" alt="Add uBlock Origin to Chrome">
+                    <img src="adblocker/chrome_get.webp" alt="Add uBlock Origin to Chrome">
                     <p>To install uBlock Origin on Google Chrome you need to visit the uBlock Origin page in the chrome web store and click on the "Add to Chrome" button.</p>
                     <a class="linkbutton" title="chrome web store: uBlock Origin" href="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm">chrome web store: uBlock Origin</a>
                     <br>
-                    <img src="adblocker/chrome_add.png" alt="Add 'uBlock Origin'? Add extension is circled">
+                    <img src="adblocker/chrome_add.webp" alt="Add 'uBlock Origin'? Add extension is circled">
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been added to Chrome.</p>
                 <h3 id="OTHERS">Installing uBlock Origin on other Web Browsers</h3>
                     <p>If you are using a web browser that has not been mentioned you should follow the Google Chrome guide as most popular web browsers are based on Google Chrome meaning that the extension should be compatible, if you are using Safari, you are out of luck as uBlock Origin is not supported on any version of the Safari web browser.</p>
             <h2 id="allowing-ads">How do I allow ads on a specific site?</h2> 
-                <img src="adblocker/allow_ads.png" alt="Power button is circled.">
+                <img src="adblocker/allow_ads.webp" alt="Power button is circled.">
                 <p>If you want to allow ads on a particular website for any reason, you just need to click on the uBlock Origin extension, you then need to click on the giant power button, this will whitelist the entire website, to view the ads simply refresh the page.</p>
                 <p>If you want to block the ads after whitelisting the website you just need to navigate to that website again and click the power button, it will then turn blue and the ads will be blocked again.</p>
             <hr>
