--- a/pc_tips/check_wddm_version.html
+++ b/pc_tips/check_wddm_version.html
@@ -45,11 +45,11 @@
                 <p>It is really easy to find your Windows Display Driver Model version, you will need to use a tool called DirectX Diagnostic Tool (dxdiag.exe), this tool is free to use and is built into your computer.</p>
             <h2 id="using-dxdiag">How do I use DirectX Diagnostic Tool to find my WDDM version?</h2>
                 <p>It is really easy to find your WDDM version using the dxdiag tool, to launch dxdiag you need to open run by holding both the Windows key "🪟" and "R" key on your keyboard at the same time.</p>
-                <img src="check_wddm_version/run_dxdiag.png" alt="an image representing Run dialog, dxdiag.exe has been entered.">
+                <img src="check_wddm_version/run_dxdiag.webp" alt="an image representing Run dialog, dxdiag.exe has been entered.">
                 <p>Once you have opened the run dialog, you need to enter "dxdiag.exe" and press the "OK" button, this will launch the DirectX Diagnostic Tool.</p>
-                <img src="check_wddm_version/dxdiag.png" alt="an image representing dxdiag, Display 1 tab has been highlighted.">
+                <img src="check_wddm_version/dxdiag.webp" alt="an image representing dxdiag, Display 1 tab has been highlighted.">
                 <p>You should now see the DirectX Diagnostic Tool; you need to click on the tab that says "Display 1".</p>
-                <img src="check_wddm_version/display_1_dxdiag.png" alt="an image representing dxdiag Display 1 tab, Drivers section is circled, Driver Model has been highlighted.">
+                <img src="check_wddm_version/display_1_dxdiag.webp" alt="an image representing dxdiag Display 1 tab, Drivers section is circled, Driver Model has been highlighted.">
                 <p>On the right of the dxdiag tool you should see a section called "Drivers", in this section you should see your Driver Model, in the example above the Driver Model is "WDDM 3.1", the value you see in this section is your WDDM version.</p>
                 <p><strong>Your WDDM version must be 2.0 or higher if you wish to run Windows 11, you might be able to update to a newer driver model by updating your display drivers or by upgrading your GPU if you are using a desktop.</strong></p>
                 <p><strong>If you are using a laptop, you cannot replace your GPU and you will need to replace your entire machine if WDDM 2.0 drivers are not available for your hardware if you wish to upgrade to Windows 11.</strong></p>
