--- a/pc_tips/hardware_acceleration_black_screen_fix.html
+++ b/pc_tips/hardware_acceleration_black_screen_fix.html
@@ -43,7 +43,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Fixing Black Squares and Flashing Black Screens in Applications That Use Hardware Acceleration</h1>
-            <img src="hardware_acceleration_black_screen_fix/black_artefacts_mockup.png" alt="an image representing black artefacts in Microsoft Office.">
+            <img src="hardware_acceleration_black_screen_fix/black_artefacts_mockup.webp" alt="an image representing black artefacts in Microsoft Office.">
                 <p class="imgdescription">The glitch causes applications that use Hardware Acceleration to have black artefacts, this image is a mock-up as the artifacts do not appear long enough to capture an example.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Have you run into problems on Windows 10/ 11 where your screen randomly starts flashing black, you see black squares in videos and when you are browsing the internet, you see black squares in Microsoft Office?</p>
