--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -46,7 +46,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Upgrading to Windows 11</h1>
-            <img src="upgrading_to_windows11/upgradefrom10to11.jpg" alt="Transitioning from Windows 10 to Windows 11">
+            <img src="upgrading_to_windows11/upgradefrom10to11.webp" alt="Transitioning from Windows 10 to Windows 11">
                 <p class="imgdescription">The time to transition from Windows 10 to Windows 11 is here.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Windows 11 was released on 05/10/2021, making it three years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
@@ -58,9 +58,9 @@
             <p>It is really simple to tell if your computer is supported, you need to use free Microsoft PC Health Check App as it is the official way to tell if your computer is supported. You can the PC Health Check App below.</p>
             <a class="linkbutton" title="Download Microsoft PC Health Check App" href="https://aka.ms/GetPCHealthCheckApp">Download PC Health Checker</a>
             <h3 id="pc-health-check">How to use the PC Health Check</h3>
-            <img src="upgrading_to_windows11/pc_health_check.png" alt="PC health check app, click on the Check now button.">
+            <img src="upgrading_to_windows11/pc_health_check.webp" alt="PC health check app, click on the Check now button.">
                 <p>The PC Health Check App is really easy to use, once you have downloaded and installed it you should see a screen like the one pictured above, you just need to click on the 'Check Now' button and it will tell you if you PC is ready for Windows 11 or not.</p>
-            <img src="upgrading_to_windows11/windows11ready.png" alt="Image, This PC meets Windows 11 requirements">
+            <img src="upgrading_to_windows11/windows11ready.webp" alt="Image, This PC meets Windows 11 requirements">
                 <p><strong>If you see a message telling you that "This PC meets Windows 11 requirements" you can skip the next steps and jump straight to Downloading and Installing Windows 11.</strong></p>
                 <p>If you see anything else, this means that your PC is not officially supported but you can probably still run it anyway, read the 'What to do if my PC is unsupported?' section for more information.</p>
             <h2 id="Unsupported-pc">What to do if my PC is unsupported?</h2> 
